# flare

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp
flare/: CMakeLists.txt  flare.cpp  main.cpp
flare/camera/: camera.cpp  camera.h
flare/include/flare/Render/: Render.h
flare/include/flare/base/: VulkanInitializers.h  VulkanSwapChain.h
flare/render/: render.cpp  render.h
flare/service_locator/: service.h  service_locator.h
flare/src/Render/: Render.cpp
flare/src/base/: VulkanSwapChain.cpp
flare/window/: window.cpp  window.h  window_service.h
plugins/glad/: CMakeLists.txt
plugins/glad/include/glad/: glad.h
plugins/glad/src/: glad.c
source/: CMakeLists.txt
source/flare/render/: render.cpp  render.h
